# pyresult

./: .gitignore  README.md  pyproject.toml  result.py
